--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,21 +1,71 @@
 {
   "version": "0.2.0",
   "configurations": [
-      {
+    {
       "type": "msedge",
-      "request": "launch",  
-      "name": "vue:edge",  // 此项配置的名字，显示在调试页的配置选择下拉框中。
-      "url": "http://localhost:5173",  // chrome 自动启动时打开的网址(开发环境启动的本地调试入口)。
-      "webRoot": "${workspaceFolder}",  // 静态文件所在的本机目录(一般是项目根目录)。
+      "request": "launch",
+      "name": "vue:edge",
+      "url": "http://localhost:5173",
+      "webRoot": "${workspaceFolder}",
       "sourceMaps": true
     },
     {
       "type": "chrome",
-      "request": "launch",  
-      "name": "vue:Chrome",  // 此项配置的名字，显示在调试页的配置选择下拉框中。
-      "url": "http://localhost:5173",  // chrome 自动启动时打开的网址(开发环境启动的本地调试入口)。
-      "webRoot": "${workspaceFolder}",  // 静态文件所在的本机目录(一般是项目根目录)。
+      "request": "launch",
+      "name": "vue:Chrome",
+      "url": "http://localhost:5173",
+      "webRoot": "${workspaceFolder}",
       "sourceMaps": true
+    },
+    {
+      "type": "pwa-msedge",
+      "name": "Launch Microsoft Edge",
+      "request": "launch",
+      "runtimeArgs": [
+        "--remote-debugging-port=9222"
+      ],
+      "url": "http://localhost:5173", // Provide your project's url to finish configuring
+      "presentation": {
+        "hidden": true
+      }
+    },
+    {
+      "type": "pwa-msedge",
+      "name": "Launch Microsoft Edge in headless mode",
+      "request": "launch",
+      "runtimeArgs": [
+        "--headless",
+        "--remote-debugging-port=9222"
+      ],
+      "url": "http://localhost:5173", // Provide your project's url to finish configuring
+      "presentation": {
+        "hidden": true
+      }
+    },
+    {
+      "type": "vscode-edge-devtools.debug",
+      "name": "Open Edge DevTools",
+      "request": "attach",
+      "url": "http://localhost:5173", // Provide your project's url to finish configuring
+      "presentation": {
+        "hidden": true
+      }
+    }
+  ],
+  "compounds": [
+    {
+      "name": "Launch Edge Headless and attach DevTools",
+      "configurations": [
+        "Launch Microsoft Edge in headless mode",
+        "Open Edge DevTools"
+      ]
+    },
+    {
+      "name": "Launch Edge and attach DevTools",
+      "configurations": [
+        "Launch Microsoft Edge",
+        "Open Edge DevTools"
+      ]
     }
   ]
 }
