--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "element-plus": "^2.2.27",
     "pinia": "^2.0.28",
     "sass": "^1.57.0",
-    "typescript": "^4.9.4",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
@@ -24,9 +23,12 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "eslint": "^8.30.0",
     "eslint-config-standard": "^17.0.0",
+    "eslint-config-standard-with-typescript": "^24.0.0",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.6.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-vue": "^9.8.0",
+    "typescript": "^4.9.4",
     "unplugin-auto-import": "^0.12.1",
     "unplugin-vue-components": "^0.22.12",
     "vite": "^4.0.0"
