[个人博客开发] 页面设计

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,14 @@
     "compilerOptions": {
         "forceConsistentCasingInFileNames": true,
         "strict": true,
-        "allowJs": true
-    }
+        "allowJs": true,
+        "outDir": "build",
+    },
+    "include": [
+        "src/**/*"
+    ],
+    "exclude": [
+        "node_modules",
+        "build/**/*"
+    ]
 }
