--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.0.10",
     "axios": "^1.2.1",
     "element-plus": "^2.2.27",
     "pinia": "^2.0.28",
@@ -30,7 +31,9 @@
     "eslint-plugin-vue": "^9.8.0",
     "typescript": "^4.9.4",
     "unplugin-auto-import": "^0.12.1",
+    "unplugin-icons": "^0.14.15",
     "unplugin-vue-components": "^0.22.12",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "vite-plugin-inspect": "^0.7.10"
   }
 }
